recovering from git INternal http://stackoverflow.com/questions/11706215/how-to-fix-git-error-object-file-is-empty

--- a/frontend/src/app/components/section/sectionAdd/sectionAdd.scss
+++ b/frontend/src/app/components/section/sectionAdd/sectionAdd.scss
@@ -29,3 +29,6 @@
   display: table;
   content: " ";
 }
+.m_l{
+  margin-left: 15px;
+}
